--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
         "stfalcon/tinymce-bundle": "dev-master",
         "sonata-project/admin-bundle": "dev-master",
         "sonata-project/doctrine-orm-admin-bundle": "dev-master",
-        "ornicar/apc-bundle": "dev-master"
+        "ornicar/apc-bundle": "dev-master",
+        "exercise/htmlpurifier-bundle": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
