Add setLocale on every request.

--- a/src/Adstacy/AppBundle/Resources/config/services.yml
+++ b/src/Adstacy/AppBundle/Resources/config/services.yml
@@ -2,6 +2,7 @@ imports:
   - { resource: types.yml }
   - { resource: twig.yml }
   - { resource: admin.yml }
+  - { resource: listener.yml }
 
 services:
     adstacy.user.provider:
