--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -280,7 +280,8 @@ stfalcon_tinymce:
                 - "fullscreen"
                 - "save table contextmenu directionality"
                 - "paste textcolor"
-            toolbar1: "image | link table | insertfile undo redo | styleselect | bold italic forecolor backcolor | alignleft aligncenter alignright alignjustify | bullist numlist outdent indent | fullscreen"
+            toolbar1: "image | bullist numlist outdent indent | link table | fullscreen" 
+            toolbar2: "insertfile undo redo | styleselect | bold italic forecolor backcolor | alignleft aligncenter alignright alignjustify"
             menubar: false
             file_browser_callback: elFinderBrowser
             height: "300px"
