--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -219,11 +219,11 @@ vich_uploader:
         ad_image:
             uri_prefix: /uploads
             upload_destination: image_fs
-            namer: vich_uploader.namer_origname
+            namer: vich_uploader.namer_uniqid
         user_image:
             uri_prefix: /uploads
             upload_destination: image_fs
-            namer: vich_uploader.namer_origname
+            namer: vich_uploader.namer_uniqid
 
 liip_imagine:
     filter_sets:
