--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -31,6 +31,11 @@ security:
             logout: true
             anonymous: true
             switch_user: { role: ROLE_SUPER_ADMIN, parameter: _impersonate }
+            remember_me:
+                key: SupperrrSec3tttttK3YYAYY
+                lifetime: 31536000
+                path: /
+                domain: ~
 
     access_control:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
