--- a/src/Adstacy/AppBundle/Resources/config/routing.yml
+++ b/src/Adstacy/AppBundle/Resources/config/routing.yml
@@ -18,6 +18,11 @@ adstacy_app_explore:
     defaults:
         _controller: AdstacyAppBundle:App:explore
 
+adstacy_app_notifications:
+    pattern: /notifications
+    defaults:
+        _controller: AdstacyAppBundle:App:notifications
+
 adstacy_app_tags:
     pattern: /tags
     defaults:
