--- a/src/Adstacy/NotificationBundle/Resources/config/services.yml
+++ b/src/Adstacy/NotificationBundle/Resources/config/services.yml
@@ -11,6 +11,11 @@ services:
         class: Adstacy\NotificationBundle\NotificationSaver\FollowNotificationSaver
         arguments: [@doctrine.orm.entity_manager]
 
+    adstacy.notification.notification_saver.promote:
+        class: Adstacy\NotificationBundle\NotificationSaver\PromoteNotificationSaver
+        arguments: [@doctrine.orm.entity_manager]
+
+
     adstacy.notification.notification_formatter.comment:
         class: Adstacy\NotificationBundle\NotificationFormatter\CommentNotificationFormatter
         arguments: [@router, @translator]
@@ -23,6 +28,10 @@ services:
         class: Adstacy\NotificationBundle\NotificationFormatter\FollowNotificationFormatter
         arguments: [@router, @translator]
 
+    adstacy.notification.notification_formatter.promote:
+        class: Adstacy\NotificationBundle\NotificationFormatter\PromoteNotificationFormatter
+        arguments: [@router, @translator]
+
     adstacy.notification.manager:
         class: Adstacy\NotificationBundle\NotificationManager
         arguments:
@@ -30,10 +39,12 @@ services:
                 - @adstacy.notification.notification_saver.comment
                 - @adstacy.notification.notification_saver.mention
                 - @adstacy.notification.notification_saver.follow
+                - @adstacy.notification.notification_saver.promote
             -
                 - @adstacy.notification.notification_formatter.comment
                 - @adstacy.notification.notification_formatter.mention
                 - @adstacy.notification.notification_formatter.follow
+                - @adstacy.notification.notification_formatter.promote
 
     adstacy.twig.notification_extension:
         class: Adstacy\NotificationBundle\Twig\NotificationExtension
