--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -6,6 +6,7 @@ parameters:
     elfinder.loader: Adstacy\AppBundle\Loader\FMElfinderLoader
     max_ads_per_page: 40
     max_users_per_page: 15
+    max_notifications: 50
     thumb_width: 234
     mini_thumb_size: 100
     profile_pic_size: 100
