Populate redis data command.

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -14,6 +14,8 @@ parameters:
     mailer_user:       ~
     mailer_password:   ~
 
+    redis_dsn: redis://localhost
+
     node_path:         "/usr/local/bin/node"
     node_modules_path: "/usr/local/lib/node_modules"
 
