--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -305,3 +305,11 @@ ornicar_apc:
     host: http://www.adstacy.com
     web_dir: %kernel.root_dir%/../web
     mode: curl
+
+snc_redis:
+    clients:
+        default:
+            type: predis
+            alias: default
+            dsn: %redis_dsn%
+            logging: %kernel.debug%
