Add autocomplete mention.

--- a/src/Adstacy/AppBundle/Resources/config/routing.yml
+++ b/src/Adstacy/AppBundle/Resources/config/routing.yml
@@ -23,11 +23,6 @@ adstacy_app_tags:
     defaults:
         _controller: AdstacyAppBundle:App:tags
 
-adstacy_app_usernames:
-    pattern: /usernames/{q}
-    defaults:
-        _controller: AdstacyAppBundle:App:usernames
-
 adstacy_app_contact:
     pattern: /contact-us
     defaults:
@@ -43,3 +38,7 @@ AdstacyAppBundle_search:
 
 AdstacyAppBundle_ads:
     resource: "@AdstacyAppBundle/Resources/config/routing/ads.yml"
+
+AdstacyAppBundle_api:
+    resource: "@AdstacyAppBundle/Resources/config/routing/api.yml"
+    prefix: /api
