Refactor notification send email.

--- a/src/Adstacy/NotificationBundle/Resources/config/services.yml
+++ b/src/Adstacy/NotificationBundle/Resources/config/services.yml
@@ -56,3 +56,4 @@ services:
         class: Adstacy\NotificationBundle\EmailManager
         arguments:
             - @service_container
+            - @adstacy.notification.manager
