--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -68,6 +68,9 @@ fos_user_resetting:
 elfinder:
      resource: "@FMElfinderBundle/Resources/config/routing.yml"
 
+fos_js_routing:
+    resource: "@FOSJsRoutingBundle/Resources/config/routing/routing.xml"
+
 admin:
     resource: "@SonataAdminBundle/Resources/config/routing/sonata_admin.xml"
     prefix: /_admin
