--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
         "sonata-project/doctrine-orm-admin-bundle": "dev-master",
         "ornicar/apc-bundle": "dev-master",
         "exercise/htmlpurifier-bundle": "dev-master",
-        "mobiledetect/mobiledetectlib": "dev-master"
+        "mobiledetect/mobiledetectlib": "dev-master",
+        "friendsofsymfony/jsrouting-bundle": "1.2.*"
     },
     "scripts": {
         "post-install-cmd": [
