--- a/src/Adstacy/AppBundle/Resources/config/routing/api.yml
+++ b/src/Adstacy/AppBundle/Resources/config/routing/api.yml
@@ -2,3 +2,5 @@ adstacy_app_api_users:
     pattern: /users.json
     defaults:
         _controller: AdstacyAppBundle:Api:users
+    options:
+      expose: true
