--- a/src/Adstacy/AppBundle/Resources/config/routing/search.yml
+++ b/src/Adstacy/AppBundle/Resources/config/routing/search.yml
@@ -2,3 +2,12 @@ adstacy_app_search:
     pattern: /search
     defaults:
         _controller: AdstacyAppBundle:Search:search
+    options:
+        expose: true
+
+adstacy_app_search_users:
+    pattern: /search/users
+    defaults:
+        _controller: AdstacyAppBundle:Search:searchUsers
+    options:
+        expose: true
