--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,8 @@
         "mobiledetect/mobiledetectlib": "dev-master",
         "friendsofsymfony/jsrouting-bundle": "1.2.*",
         "snc/redis-bundle": "1.1.*",
-        "predis/predis": "0.8.*"
+        "predis/predis": "0.8.*",
+        "facebook/php-sdk": "3.2.*"
     },
     "scripts": {
         "post-install-cmd": [
