--- a/src/Adstacy/AppBundle/Resources/config/routing.yml
+++ b/src/Adstacy/AppBundle/Resources/config/routing.yml
@@ -28,10 +28,10 @@ adstacy_app_contact:
     defaults:
         _controller: AdstacyAppBundle:App:contactUs
 
-adstacy_app_find_friends:
-    pattern: /find-friends
+adstacy_app_who_to_follow:
+    pattern: /who-to-follow
     defaults:
-        _controller: AdstacyAppBundle:App:findFriends
+        _controller: AdstacyAppBundle:App:whoToFollow
 
 adstacy_app_page_show:
     pattern: /pages/{key}
