--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -32,6 +32,7 @@ security:
             anonymous: true
             switch_user: { role: ROLE_SUPER_ADMIN, parameter: _impersonate }
             remember_me:
+                always_remember_me: true
                 key: SupperrrSec3tttttK3YYAYY
                 lifetime: 31536000
                 path: /
