--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,8 @@
         "friendsofsymfony/jsrouting-bundle": "1.2.*",
         "snc/redis-bundle": "1.1.*",
         "predis/predis": "0.8.*",
-        "facebook/php-sdk": "3.2.*"
+        "facebook/php-sdk": "3.2.*",
+        "j7mbo/twitter-api-php": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
