--- a/src/Adstacy/AppBundle/Resources/config/services.yml
+++ b/src/Adstacy/AppBundle/Resources/config/services.yml
@@ -29,3 +29,12 @@ services:
             -
                 appId: %facebook_app_id%
                 secret: %facebook_app_secret%
+
+    twitter:
+        class: TwitterAPIExchange
+        arguments:
+            - 
+                oauth_access_token: %twitter_access_token%
+                oauth_access_token_secret: %twitter_access_token_secret%
+                consumer_key: %twitter_client_id%
+                consumer_secret: %twitter_client_secret%
