--- a/src/Adstacy/AppBundle/Resources/config/services.yml
+++ b/src/Adstacy/AppBundle/Resources/config/services.yml
@@ -7,7 +7,7 @@ imports:
 services:
     adstacy.user.provider:
         class: Adstacy\AppBundle\Security\User\Provider\UserProvider
-        arguments: [@fos_user.user_manager, @session, @router]
+        arguments: [@fos_user.user_manager, @session, @router, @service_container]
     
     adstacy.manager.user:
         class: Adstacy\AppBundle\Manager\UserManager
