--- a/composer.json
+++ b/composer.json
@@ -8,9 +8,9 @@
     },
     "require": {
         "php": ">=5.3.3",
-        "symfony/symfony": "2.3.*",
+        "symfony/symfony": "2.3.5",
         "doctrine/orm": "2.3.*",
-        "doctrine/common": "2.3.*",
+        "doctrine/common": "2.3.0",
         "doctrine/doctrine-bundle": "1.2.*",
         "twig/extensions": "1.0.*",
         "symfony/assetic-bundle": "2.3.*",
@@ -21,24 +21,24 @@
         "sensio/generator-bundle": "2.3.*",
         "incenteev/composer-parameter-handler": "~2.0",
         "friendsofsymfony/user-bundle": "~2.0@dev",
-        "vich/uploader-bundle": "dev-master",
-        "knplabs/knp-gaufrette-bundle": "dev-master",
-        "hwi/oauth-bundle": "0.3.*@dev",
+        "vich/uploader-bundle": "v0.9.0",
+        "knplabs/knp-gaufrette-bundle": "v0.1.4",
+        "hwi/oauth-bundle": "0.3.0",
         "doctrine/doctrine-migrations-bundle": "dev-master",
         "doctrine/doctrine-fixtures-bundle": "dev-master",
-        "fzaninotto/faker": "dev-master",
-        "liip/imagine-bundle": "dev-master",
+        "fzaninotto/faker": "1.2.0",
+        "liip/imagine-bundle": "v0.16.0",
         "friendsofsymfony/elastica-bundle": "dev-master",
-        "jms/serializer-bundle": "dev-master",
-        "pagerfanta/pagerfanta": "dev-master",
-        "jms/security-extra-bundle": "dev-master",
-        "helios-ag/fm-elfinder-bundle": "dev-master",
-        "stfalcon/tinymce-bundle": "dev-master",
-        "sonata-project/admin-bundle": "dev-master",
-        "sonata-project/doctrine-orm-admin-bundle": "dev-master",
+        "jms/serializer-bundle": "0.12.0",
+        "pagerfanta/pagerfanta": "v1.0.1",
+        "jms/security-extra-bundle": "1.5.1",
+        "helios-ag/fm-elfinder-bundle": "1.4",
+        "stfalcon/tinymce-bundle": "v0.3.2",
+        "sonata-project/admin-bundle": "2.2.5",
+        "sonata-project/doctrine-orm-admin-bundle": "2.2.4",
         "ornicar/apc-bundle": "dev-master",
         "exercise/htmlpurifier-bundle": "dev-master",
-        "mobiledetect/mobiledetectlib": "dev-master",
+        "mobiledetect/mobiledetectlib": "2.7.1",
         "friendsofsymfony/jsrouting-bundle": "1.2.*",
         "snc/redis-bundle": "1.1.*",
         "predis/predis": "0.8.*",
